removed labels and fixed background
fixed background image not showing up and removed the labels for each input

--- a/css/screen.css
+++ b/css/screen.css
@@ -216,7 +216,7 @@ html{
   font-size: 16px;
   text-shadow: 1px 1px 1px #000;
   color: white;
-  background-image: url("images/rl1.png");
+  background-image: url("../images/rl1.png");
   background-size: 100%;
   background-repeat: no-repeat;
 }
